--- a/main/resources/plugin.yml
+++ b/main/resources/plugin.yml
@@ -7,61 +7,110 @@ main: com.blockmovers.plugins.restrictivecreative.RestrictiveCreative
 name: RestrictiveCreative
 startup: postworld
 url: http://blockmovers.com/
-version: '0.2'
+version: '0.4'
 commands:
   creative:
     usage: /<command> (action) [player]
     aliases: c
 permissions:
-  restrictivecreative.creativeonjoin:
+  rc.creativeonjoin:
     default: false
     description: sets players to creative mode on join
-  restrictivecreative.keepinv:
+  rc.keepinv:
     default: false
     description: allows players to keep their inventory
-  restrictivecreative.toggle:
+  rc.toggle:
     default: false
     description: allows the player to toggle the command
-  restrictivecreative.chest.open:
+  rc.chest.open:
     default: false
     description: allows the player to open chests in creative
-  restrictivecreative.chest.break:
+  rc.chest.break:
     default: false
     description: allows the player to break chests in creative
-  restrictivecreative.toggle.others:
+  rc.allow.fly:
+    default: false
+    description: Allows the player above the heightlimit
+  rc.toggle.others:
     default: false
     description: allows the player to toggle the command for others
     children:
-      restrictivecreative.toggle: true
-  restrictivecreative.exempt.all:
+      rc.toggle: true
+  rc.exempt.all:
     default: false
     description: allows the player to be exempt from all block lists
     children:
-      restrictivecreative.break.whitelist.exempt: true
-      restrictivecreative.break.blacklist.exempt: true
-      restrictivecreative.place.whitelist.exempt: true
-      restrictivecreative.place.blacklist.exempt: true
-  restrictivecreative.break.whitelist.exempt:
+      rc.creative.break.whitelist.exempt: true
+      rc.creative.break.blacklist.exempt: true
+      rc.creative.place.whitelist.exempt: true
+      rc.creative.place.blacklist.exempt: true
+#creative mode
+  rc.creative.exempt.all:
+    default: false
+    description: allows the player to be exempt from all block lists
+    children:
+      rc.creative.break.whitelist.exempt: true
+      rc.creative.break.blacklist.exempt: true
+      rc.creative.place.whitelist.exempt: true
+      rc.creative.place.blacklist.exempt: true
+      rc.general.break.whitelist.exempt: true
+      rc.general.break.blacklist.exempt: true
+      rc.general.place.whitelist.exempt: true
+      rc.general.place.blacklist.exempt: true
+  rc.creative.break.whitelist.exempt:
     default: false
     description: sets the player to exempt for the break whitelist
-  restrictivecreative.break.blacklist.exempt:
+  rc.creative.break.blacklist.exempt:
     default: false
     description: sets the player to exempt for the break blacklist
-  restrictivecreative.place.whitelist.exempt:
+  rc.creative.place.whitelist.exempt:
     default: false
     description: sets the player to exempt for the place whitelist
-  restrictivecreative.place.blacklist.exempt:
+  rc.creative.place.blacklist.exempt:
     default: false
     description: sets the player to exempt for the place blacklist
-  restrictivecreative.break.whitelist:
+  rc.creative.break.whitelist:
     default: false
     description: sets the player to use the break whitelist
-  restrictivecreative.break.blacklist:
+  rc.creative.break.blacklist:
     default: false
     description: sets the player to use the break blacklist
-  restrictivecreative.place.whitelist:
+  rc.creative.place.whitelist:
     default: false
     description: sets the player to use the place whitelist
-  restrictivecreative.place.blacklist:
+  rc.creative.place.blacklist:
+    default: false
+    description: sets the player to use the place blacklist
+#general mode
+  rc.general.exempt.all:
+    default: false
+    description: allows the player to be exempt from all block lists
+    children:
+      rc.general.break.whitelist.exempt: true
+      rc.general.break.blacklist.exempt: true
+      rc.general.place.whitelist.exempt: true
+      rc.general.place.blacklist.exempt: true
+  rc.general.break.whitelist.exempt:
+    default: false
+    description: sets the player to exempt for the break whitelist
+  rc.general.break.blacklist.exempt:
+    default: false
+    description: sets the player to exempt for the break blacklist
+  rc.general.place.whitelist.exempt:
+    default: false
+    description: sets the player to exempt for the place whitelist
+  rc.general.place.blacklist.exempt:
+    default: false
+    description: sets the player to exempt for the place blacklist
+  rc.general.break.whitelist:
+    default: false
+    description: sets the player to use the break whitelist
+  rc.general.break.blacklist:
+    default: false
+    description: sets the player to use the break blacklist
+  rc.general.place.whitelist:
+    default: false
+    description: sets the player to use the place whitelist
+  rc.general.place.blacklist:
     default: false
     description: sets the player to use the place blacklist
