Tons of fixes.. fixed enchantment items issue, some of the item drops issue, opening/destroying furnaces/enchantment tables/jukeboxes/chests, fixed using of items

--- a/main/resources/plugin.yml
+++ b/main/resources/plugin.yml
@@ -7,15 +7,12 @@ main: com.blockmovers.plugins.restrictivecreative.RestrictiveCreative
 name: RestrictiveCreative
 startup: postworld
 url: http://blockmovers.com/
-version: '0.4'
+version: '0.5'
 commands:
   creative:
     usage: /<command> (action) [player]
     aliases: c
 permissions:
-  rc.creativeonjoin:
-    default: false
-    description: sets players to creative mode on join
   rc.keepinv:
     default: false
     description: allows players to keep their inventory
@@ -28,6 +25,27 @@ permissions:
   rc.chest.break:
     default: false
     description: allows the player to break chests in creative
+  rc.jukebox.open:
+    default: false
+    description: allows the player to open jukeboxes in creative
+  rc.jukebox.break:
+    default: false
+    description: allows the player to break jukeboxes in creative
+  rc.dispenser.open:
+    default: false
+    description: allows the player to open dispensers in creative
+  rc.dispenser.break:
+    default: false
+    description: allows the player to break dispensers in creative
+  rc.furnace.open:
+    default: false
+    description: allows the player to open furnaces in creative
+  rc.furnace.break:
+    default: false
+    description: allows the player to break furnaces in creative
+  rc.enchant.open:
+    default: false
+    description: allows the player to open enchantment tables in creative
   rc.allow.fly:
     default: false
     description: Allows the player above the heightlimit
@@ -44,6 +62,12 @@ permissions:
       rc.creative.break.blacklist.exempt: true
       rc.creative.place.whitelist.exempt: true
       rc.creative.place.blacklist.exempt: true
+      rc.general.break.whitelist.exempt: true
+      rc.general.break.blacklist.exempt: true
+      rc.general.place.whitelist.exempt: true
+      rc.general.place.blacklist.exempt: true
+      rc.creative.items.exempt: true
+      rc.general.items.exempt: true
 #creative mode
   rc.creative.exempt.all:
     default: false
@@ -53,10 +77,10 @@ permissions:
       rc.creative.break.blacklist.exempt: true
       rc.creative.place.whitelist.exempt: true
       rc.creative.place.blacklist.exempt: true
-      rc.general.break.whitelist.exempt: true
-      rc.general.break.blacklist.exempt: true
-      rc.general.place.whitelist.exempt: true
-      rc.general.place.blacklist.exempt: true
+      rc.creative.items.exempt: true
+  rc.creative.items.exempt:
+    default: false
+    description: sets the player exempt from using items
   rc.creative.break.whitelist.exempt:
     default: false
     description: sets the player to exempt for the break whitelist
@@ -90,6 +114,10 @@ permissions:
       rc.general.break.blacklist.exempt: true
       rc.general.place.whitelist.exempt: true
       rc.general.place.blacklist.exempt: true
+      rc.general.items.exempt: true
+  rc.general.items.exempt:
+    default: false
+    description: sets the player exempt from using items
   rc.general.break.whitelist.exempt:
     default: false
     description: sets the player to exempt for the break whitelist
